--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "scripts": {
     "start": "node src/index.js",
+    "start:http": "node http/wrapper.js",
     "test": "node test/server.test.js"
   },
   "keywords": [
@@ -40,6 +41,7 @@
   ],
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.25.2",
+    "express": "^4.21.2",
     "zod": "~3.24.0"
   }
 }
