--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "start": "node src/index.js",
     "start:http": "node http/wrapper.js",
-    "test": "node test/server.test.js"
+    "test": "node test/server.test.js && node test/http-wrapper.test.js"
   },
   "keywords": [
     "mcp",
@@ -43,5 +43,8 @@
     "@modelcontextprotocol/sdk": "^1.25.2",
     "express": "^4.21.2",
     "zod": "~3.24.0"
+  },
+  "devDependencies": {
+    "supertest": "^7.1.3"
   }
 }
