refactor: simplify CI tests by consolidating test commands

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,5 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Test (stdio)
-        run: npm run test:stdio
-
-      - name: Test (http wrapper)
-        run: npm run test:http
+      - name: Test
+        run: npm run test
