--- a/.env.example
+++ b/.env.example
@@ -61,3 +61,15 @@ RAG_FALLBACK=fuse
 # * DATA_SYNC_TIMEOUT_MS: timeout per git operation in milliseconds
 # DATA_SYNC_ON_START=false
 # DATA_SYNC_TIMEOUT_MS=30000
+
+# Data bootstrap mode (for npm/npx installs without submodules)
+# * MCP_DATA_DIR: explicit existing data root (must contain metadata/, samples/, documentation/)
+# * MCP_DATA_AUTO_DOWNLOAD: auto-download pinned sample/doc archives when local data is missing
+# * MCP_DATA_CACHE_DIR: where downloaded data is stored
+# * MCP_DATA_REFRESH_ON_START: force re-download even when cache matches lock manifest
+# * MCP_DATA_DOWNLOAD_TIMEOUT_MS: timeout per archive download request in milliseconds
+# MCP_DATA_DIR=
+# MCP_DATA_AUTO_DOWNLOAD=true
+# MCP_DATA_CACHE_DIR=
+# MCP_DATA_REFRESH_ON_START=false
+# MCP_DATA_DOWNLOAD_TIMEOUT_MS=180000
