--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "files": [
     "src",
-    "data",
+    "data/metadata",
     "scripts",
     "README.md",
     ".env.example"
@@ -24,9 +24,11 @@
   "scripts": {
     "start": "node src/index.js",
     "test": "node test/server.test.js",
-    "data:bootstrap": "git submodule update --init --recursive",
+    "data:bootstrap": "git submodule sync --recursive && git submodule update --init --recursive --jobs 1",
     "data:sync": "node scripts/sync-submodules.mjs",
-    "data:status": "git submodule status --recursive"
+    "data:status": "git submodule status --recursive",
+    "data:lock": "node scripts/update-data-lock.mjs",
+    "data:verify-lock": "node scripts/verify-data-lock.mjs"
   },
   "keywords": [
     "mcp",
@@ -47,6 +49,7 @@
     "@modelcontextprotocol/sdk": "^1.25.2",
     "@xenova/transformers": "^2.17.2",
     "dotenv": "^16.4.5",
+    "extract-zip": "^2.0.1",
     "fuse.js": "^7.0.0",
     "zod": "~3.24.0"
   },
