--- a/.gitmodules
+++ b/.gitmodules
@@ -54,3 +54,15 @@
 	path = data/samples/dynamsoft-capture-vision-nodejs
 	url = https://github.com/Dynamsoft/capture-vision-nodejs-samples.git
 	branch = main
+[submodule "data/documentation/barcode-reader-docs-js"]
+	path = data/documentation/barcode-reader-docs-js
+	url = https://github.com/dynamsoft-docs/barcode-reader-docs-js.git
+	branch = main
+[submodule "data/documentation/barcode-reader-docs-mobile"]
+	path = data/documentation/barcode-reader-docs-mobile
+	url = https://github.com/dynamsoft-docs/barcode-reader-docs-mobile.git
+	branch = main
+[submodule "data/documentation/barcode-reader-docs-server"]
+	path = data/documentation/barcode-reader-docs-server
+	url = https://github.com/dynamsoft-docs/barcode-reader-docs-server.git
+	branch = main
