--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-dynamsoft-mcp",
-  "version": "6.0.0",
+  "version": "6.1.0",
   "description": "MCP server for Dynamsoft SDKs - Barcode Reader (Mobile/Python/Web), Dynamic Web TWAIN, and Document Viewer. Provides documentation, code snippets, and API guidance.",
   "license": "MIT",
   "repository": {
@@ -23,7 +23,12 @@
   ],
   "scripts": {
     "start": "node src/index.js",
-    "test": "node test/server.test.js",
+    "test": "npm run test:fuse",
+    "test:fuse": "npm run test:stdio && npm run test:http && npm run test:package",
+    "test:local": "node --test test/integration/stdio.test.js test/integration/http-gateway.test.js",
+    "test:stdio": "node --test test/integration/stdio.test.js",
+    "test:http": "node --test test/integration/http-gateway.test.js",
+    "test:package": "node --test test/integration/package-runtime.test.js",
     "data:bootstrap": "git submodule sync --recursive && git submodule update --init --recursive --jobs 1",
     "data:sync": "node scripts/sync-submodules.mjs",
     "data:status": "git submodule status --recursive",
@@ -55,6 +60,7 @@
     "zod": "~3.24.0"
   },
   "devDependencies": {
+    "supergateway": "^3.4.3",
     "supertest": "^7.1.3"
   }
 }
