--- a/.env.example
+++ b/.env.example
@@ -52,9 +52,15 @@ RAG_FALLBACK=fuse
 # * RAG_REBUILD: true to ignore cache and rebuild on startup/search
 # * RAG_PREWARM: true to build the embedding index at startup
 # * RAG_PREWARM_BLOCK: true to block startup until prewarm completes
+# * RAG_PREBUILT_INDEX_AUTO_DOWNLOAD: auto-download prebuilt local index when local embeddings are selected
+# * RAG_PREBUILT_INDEX_URL: override prebuilt index archive URL (default GitHub release asset for current package version)
+# * RAG_PREBUILT_INDEX_TIMEOUT_MS: timeout for prebuilt index download request
 # RAG_REBUILD=false
 # RAG_PREWARM=false
 # RAG_PREWARM_BLOCK=false
+# RAG_PREBUILT_INDEX_AUTO_DOWNLOAD=true
+# RAG_PREBUILT_INDEX_URL=
+# RAG_PREBUILT_INDEX_TIMEOUT_MS=180000
 
 # Optional data submodule sync on server startup
 # * DATA_SYNC_ON_START: true to fetch + fast-forward configured submodules
