feat(rag): harden gemini prewarm with retries and checkpointing

--- a/.env.example
+++ b/.env.example
@@ -17,10 +17,18 @@ RAG_FALLBACK=fuse
 # * GEMINI_EMBED_MODEL: models/embedding-001 | models/gemini-embedding-001 | gemini-embedding-001
 # * GEMINI_API_BASE_URL: override for proxies (default https://generativelanguage.googleapis.com)
 # * GEMINI_EMBED_BATCH_SIZE: batch size for Gemini embedding requests
+# * GEMINI_RETRY_MAX_ATTEMPTS: max retry attempts for retryable Gemini errors
+# * GEMINI_RETRY_BASE_DELAY_MS: base delay for exponential backoff
+# * GEMINI_RETRY_MAX_DELAY_MS: max delay cap for exponential backoff
+# * GEMINI_REQUEST_THROTTLE_MS: fixed delay between Gemini requests
 # GEMINI_API_KEY=your_key
 # GEMINI_EMBED_MODEL=gemini-embedding-001
 # GEMINI_API_BASE_URL=https://generativelanguage.googleapis.com
 # GEMINI_EMBED_BATCH_SIZE=16
+# GEMINI_RETRY_MAX_ATTEMPTS=5
+# GEMINI_RETRY_BASE_DELAY_MS=500
+# GEMINI_RETRY_MAX_DELAY_MS=10000
+# GEMINI_REQUEST_THROTTLE_MS=0
 
 # Local embeddings (used when RAG_PROVIDER=local or fallback=local)
 # * RAG_LOCAL_MODEL: Hugging Face model id (default Xenova/all-MiniLM-L6-v2)
