--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   "scripts": {
     "start": "node src/index.js",
     "test": "npm run test:fuse",
+    "test:unit": "node --test test/unit/gemini-retry.test.js",
     "test:fuse": "npm run test:stdio && npm run test:http && npm run test:package",
     "test:local": "node --test test/integration/stdio.test.js test/integration/http-gateway.test.js",
+    "test:gemini": "node scripts/run-gemini-tests.mjs",
     "test:stdio": "node --test test/integration/stdio.test.js",
     "test:http": "node --test test/integration/http-gateway.test.js",
     "test:package": "node --test test/integration/package-runtime.test.js",
