--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,7 +79,6 @@ jobs:
         run: npm run test:local
 
   test_gemini_provider:
-    if: ${{ secrets.GEMINI_API_KEY != '' }}
     runs-on: ubuntu-latest
     env:
       GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
@@ -94,18 +93,25 @@ jobs:
       RUN_LOCAL_PROVIDER_TESTS: "false"
       RUN_GEMINI_PROVIDER_TESTS: "true"
     steps:
+      - name: Skip when GEMINI_API_KEY is missing
+        if: ${{ env.GEMINI_API_KEY == '' }}
+        run: echo "Skipping gemini provider job because GEMINI_API_KEY is not configured."
+
       - name: Checkout
+        if: ${{ env.GEMINI_API_KEY != '' }}
         uses: actions/checkout@v4
         with:
           submodules: recursive
 
       - name: Use Node 20
+        if: ${{ env.GEMINI_API_KEY != '' }}
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
 
       - name: Restore gemini RAG cache
+        if: ${{ env.GEMINI_API_KEY != '' }}
         uses: actions/cache@v4
         with:
           path: .cache/rag-index-gemini
@@ -114,16 +120,21 @@ jobs:
             rag-gemini-${{ runner.os }}-
 
       - name: Install dependencies
+        if: ${{ env.GEMINI_API_KEY != '' }}
         run: npm ci
 
       - name: Unit tests
+        if: ${{ env.GEMINI_API_KEY != '' }}
         run: npm run test:unit
 
       - name: Bootstrap data
+        if: ${{ env.GEMINI_API_KEY != '' }}
         run: npm run data:bootstrap
 
       - name: Prebuild gemini RAG index
+        if: ${{ env.GEMINI_API_KEY != '' }}
         run: npm run rag:prebuild
 
       - name: Test (gemini provider)
+        if: ${{ env.GEMINI_API_KEY != '' }}
         run: npm run test:gemini
