--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simple-dynamsoft-mcp",
   "version": "6.2.0",
-  "description": "MCP server for Dynamsoft SDKs - Barcode Reader (Mobile/Python/Web), Dynamic Web TWAIN, and Document Viewer. Provides documentation, code snippets, and API guidance.",
+  "description": "MCP server for Dynamsoft SDKs - Capture Vision, Barcode Reader (Mobile/Python/Web), Dynamic Web TWAIN, and Document Viewer. Provides documentation, code snippets, and API guidance.",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -34,6 +34,8 @@
     "data:bootstrap": "git submodule sync --recursive && git submodule update --init --recursive --jobs 1",
     "data:sync": "node scripts/sync-submodules.mjs",
     "data:status": "git submodule status --recursive",
+    "data:versions": "node scripts/update-sdk-versions.mjs",
+    "data:verify-versions": "node scripts/update-sdk-versions.mjs --check",
     "data:lock": "node scripts/update-data-lock.mjs",
     "data:verify-lock": "node scripts/verify-data-lock.mjs",
     "rag:prebuild": "node scripts/prebuild-rag-index.mjs"
@@ -42,6 +44,7 @@
     "mcp",
     "model-context-protocol",
     "dynamsoft",
+    "capture-vision",
     "barcode-reader",
     "barcode-scanner",
     "document-scanner",
