chore(data): enforce strict source-wiring validation in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Bootstrap data
         run: npm run data:bootstrap
 
+      - name: Verify data source wiring
+        run: npm run data:verify-versions:strict
+
       - name: Test (fuse + package runtime)
         run: npm run test:fuse
 
