--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "data:sync": "node scripts/sync-submodules.mjs",
     "data:status": "git submodule status --recursive",
     "data:versions": "node scripts/update-sdk-versions.mjs",
+    "data:versions:strict": "node scripts/update-sdk-versions.mjs --strict",
     "data:verify-versions": "node scripts/update-sdk-versions.mjs --check",
+    "data:verify-versions:strict": "node scripts/update-sdk-versions.mjs --check --strict",
     "data:lock": "node scripts/update-data-lock.mjs",
     "data:verify-lock": "node scripts/verify-data-lock.mjs",
     "rag:prebuild": "node scripts/prebuild-rag-index.mjs"
