--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -158,15 +158,15 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 180
     env:
-      RAG_PROVIDER: local
-      RAG_FALLBACK: none
       RAG_PREWARM: "true"
       RAG_PREWARM_BLOCK: "true"
       RAG_REBUILD: "true"
       RAG_LOCAL_MODEL: Xenova/all-MiniLM-L6-v2
       RAG_LOCAL_QUANTIZED: "true"
-      RAG_CACHE_DIR: ${{ github.workspace }}/release-assets/prebuilt-rag/cache
-      RAG_MODEL_CACHE_DIR: ${{ github.workspace }}/release-assets/prebuilt-rag/model-cache
+      PREBUILT_LOCAL_CACHE_DIR: ${{ github.workspace }}/release-assets/prebuilt-rag/local/cache
+      PREBUILT_GEMINI_CACHE_DIR: ${{ github.workspace }}/release-assets/prebuilt-rag/gemini/cache
+      PREBUILT_LOCAL_MODEL_CACHE_DIR: ${{ github.workspace }}/.cache/release-rag-models-local
+      PREBUILT_GEMINI_MODEL_CACHE_DIR: ${{ github.workspace }}/.cache/release-rag-models-gemini
       GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
       GEMINI_EMBED_BATCH_SIZE: 16
     steps:
@@ -188,6 +188,11 @@ jobs:
         run: npm run data:bootstrap
 
       - name: Prebuild local RAG index
+        env:
+          RAG_PROVIDER: local
+          RAG_FALLBACK: none
+          RAG_CACHE_DIR: ${{ env.PREBUILT_LOCAL_CACHE_DIR }}
+          RAG_MODEL_CACHE_DIR: ${{ env.PREBUILT_LOCAL_MODEL_CACHE_DIR }}
         run: npm run rag:prebuild
 
       - name: Ensure Gemini API key is configured
@@ -204,24 +209,32 @@ jobs:
           RAG_PROVIDER: gemini
           RAG_FALLBACK: none
           RAG_REBUILD: "true"
+          RAG_CACHE_DIR: ${{ env.PREBUILT_GEMINI_CACHE_DIR }}
+          RAG_MODEL_CACHE_DIR: ${{ env.PREBUILT_GEMINI_MODEL_CACHE_DIR }}
         run: npm run rag:prebuild
 
       - name: Show prebuilt RAG output
         shell: bash
         run: |
           set -euo pipefail
-          echo "[release] prebuilt rag cache dir: $RAG_CACHE_DIR"
-          if [[ -d "$RAG_CACHE_DIR" ]]; then
-            find "$RAG_CACHE_DIR" -maxdepth 2 -type f -print
+          echo "[release] local prebuilt rag cache dir: $PREBUILT_LOCAL_CACHE_DIR"
+          if [[ -d "$PREBUILT_LOCAL_CACHE_DIR" ]]; then
+            find "$PREBUILT_LOCAL_CACHE_DIR" -maxdepth 2 -type f -print
           else
-            echo "[release] cache dir missing"
+            echo "[release] local cache dir missing"
+          fi
+          echo "[release] gemini prebuilt rag cache dir: $PREBUILT_GEMINI_CACHE_DIR"
+          if [[ -d "$PREBUILT_GEMINI_CACHE_DIR" ]]; then
+            find "$PREBUILT_GEMINI_CACHE_DIR" -maxdepth 2 -type f -print
+          else
+            echo "[release] gemini cache dir missing"
           fi
 
       - name: Upload prebuilt RAG artifact
         uses: actions/upload-artifact@v4
         with:
           name: prebuilt-rag-index
-          path: ${{ env.RAG_CACHE_DIR }}/**
+          path: release-assets/prebuilt-rag/**
           if-no-files-found: error
           retention-days: 14
 
@@ -242,15 +255,17 @@ jobs:
           name: prebuilt-rag-index
           path: release-assets/prebuilt-rag
 
-      - name: Create release asset archive for prebuilt RAG index
+      - name: Create release asset archives for prebuilt RAG indexes
         shell: bash
         run: |
           set -euo pipefail
           version="${{ needs.detect.outputs.version }}"
-          tar -czf "release-assets/prebuilt-rag-index-${version}.tar.gz" -C release-assets prebuilt-rag
+          tar -czf "release-assets/prebuilt-rag-index-local-${version}.tar.gz" -C release-assets/prebuilt-rag local
+          tar -czf "release-assets/prebuilt-rag-index-gemini-${version}.tar.gz" -C release-assets/prebuilt-rag gemini
           ls -lah release-assets
           ls -lah release-assets/npm
-          echo "[release] prebuilt archive ready release-assets/prebuilt-rag-index-${version}.tar.gz"
+          echo "[release] prebuilt archive ready release-assets/prebuilt-rag-index-local-${version}.tar.gz"
+          echo "[release] prebuilt archive ready release-assets/prebuilt-rag-index-gemini-${version}.tar.gz"
 
       - name: Publish GitHub release
         uses: softprops/action-gh-release@v2
@@ -260,7 +275,8 @@ jobs:
           generate_release_notes: true
           files: |
             release-assets/npm/*.tgz
-            release-assets/prebuilt-rag-index-${{ needs.detect.outputs.version }}.tar.gz
+            release-assets/prebuilt-rag-index-local-${{ needs.detect.outputs.version }}.tar.gz
+            release-assets/prebuilt-rag-index-gemini-${{ needs.detect.outputs.version }}.tar.gz
 
       - name: Release summary
         shell: bash
@@ -271,7 +287,8 @@ jobs:
             echo "- tag: \`${{ needs.detect.outputs.tag }}\`"
             echo "- version: \`${{ needs.detect.outputs.version }}\`"
             echo "- npm_artifacts: \`release-assets/npm/*.tgz\`"
-            echo "- prebuilt_rag: \`release-assets/prebuilt-rag-index-${{ needs.detect.outputs.version }}.tar.gz\`"
+            echo "- prebuilt_rag_local: \`release-assets/prebuilt-rag-index-local-${{ needs.detect.outputs.version }}.tar.gz\`"
+            echo "- prebuilt_rag_gemini: \`release-assets/prebuilt-rag-index-gemini-${{ needs.detect.outputs.version }}.tar.gz\`"
           } >> "$GITHUB_STEP_SUMMARY"
 
   publish_npm:
